perf(TrainDepartureRegister): Performance enchancement
Fixed SonarLint issues